--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,7 @@ jobs:
         go-version: "1.22"
     - name: Test
       run: |
+        echo "Testing..."
         make test
+        go test ./...
+
