--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,23 @@
-name: Test
+name: test
 
 on:
   push:
-    tags:
-    branches:
+    branches: []
+    tags: []
   pull_request:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Go 1.23
       uses: actions/setup-go@v5
       with:
-        go-version: "1.23"
+        go-version: stable
+        cache: false
+
     - name: Test
       run: |
         echo "Testing..."
